--- a/src/pages/instrument-proficiency-check-ipc.astro
+++ b/src/pages/instrument-proficiency-check-ipc.astro
@@ -21,7 +21,7 @@ const { data } = instrumentProficiency;
   <HeaderScreen content={data.header} />
   <PageSummary content={data.pageSummary} />
   <Content data={data.expectBFR} />
-  <BookCTA content={data.bookCTA} />
+  <BookCTA content={bookCTA} />
   <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
