--- a/src/pages/stratus-finance.astro
+++ b/src/pages/stratus-finance.astro
@@ -169,7 +169,7 @@ const { data } = stratusInfo;
       </div>
     </div>
   </section>
-  <BookCTA content={data.bookCTA} />
+  <BookCTA content={bookCTA} />
   <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
