--- a/src/pages/youth-aviation-classes.astro
+++ b/src/pages/youth-aviation-classes.astro
@@ -23,7 +23,7 @@ const { data } = aviation101Info;
   <PageSummary content={data.pageSummary} />
   <Content data={data.expectAviation101} />
   <Aviation101Form data={data.form} />
-  <BookCTA content={data.bookCTA} />
+  <BookCTA content={bookCTA} />
   <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
