--- a/src/components/BookCTA.astro
+++ b/src/components/BookCTA.astro
@@ -1,11 +1,12 @@
 ---
+import BookModalButton from "./BookModalButton";
 import ImageComp from "./ImageComp.astro";
 
 const { content } = Astro.props;
 ---
 
 <section
-  class="flex flex-wrap justify-center py-12 lg:py-20 items-center align-middle bg-gradient-to-br from-primary-50 to-white"
+  class="flex flex-wrap justify-center py-12 lg:py-20 items-center align-middle bg-gradient-to-b from-accent-50 via-white to-accent-50"
 >
   <div
     class="text-white w-full lg:w-1/2 text-center lg:text-left z-10 flex flex-col items-center lg:items-start gap-4 px-5 h-full justify-center"
@@ -26,14 +27,27 @@ const { content } = Astro.props;
       class="mt-6 flex flex-wrap justify-center lg:justify-start w-full align-middle items-center gap-6 z-10"
     >
       {
-        content.buttons.map((btn) => (
-          <a
-            href={btn.link}
-            class={`${btn.primary ? "btn-accent" : "btn-white"} w-full md:w-auto`}
-          >
-            {btn.name}
-          </a>
-        ))
+        content.buttons && (
+          <div class="mt-12 mb-6 gap-3 flex flex-wrap justify-center lg:justify-start align-middle items-center">
+            {content.buttons.map((btn) => (
+              <a
+                href={btn.link}
+                class={`${btn.primary ? "btn-accent" : "btn-primary"} w-full md:w-auto`}
+              >
+                {btn.name}
+              </a>
+            ))}
+          </div>
+        )
+      }
+      {
+        !content.buttons && content.bookModal && (
+          <BookModalButton
+            btnStyle="btn-accent mt-8"
+            btnText="Get The Guide"
+            client:only
+          />
+        )
       }
     </div>
   </div>
