--- a/src/pages/our-fleet/cessna-172.astro
+++ b/src/pages/our-fleet/cessna-172.astro
@@ -8,6 +8,7 @@ import BookCTA from "../../components/BookCTA.astro";
 import programsSwiper from "../../data/programSwiper";
 import AircraftInfo from "../../components/AircraftInfo.astro";
 import cessnaInfo from "../../data/cessna-172";
+import bookCTA from "../../data/book-cta";
 
 const { data } = cessnaInfo;
 ---
@@ -22,7 +23,7 @@ const { data } = cessnaInfo;
   <PageSummary content={data.pageSummary} />
   <AircraftInfo data={data.aircraftInfo} />
   <ProgramSwiper content={programsSwiper} />
-  <BookCTA content={data.bookCTA} />
+  <BookCTA content={bookCTA} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../../scripts/creativeSwiper.js"></script>
 </BaseLayout>
