--- a/src/pages/our-team.astro
+++ b/src/pages/our-team.astro
@@ -37,6 +37,6 @@ const { data } = ourTeam;
     organizations={data.partners.organizations}
   />
 
-  <BookCTA content={data.bookCTA} />
+  <BookCTA content={bookCTA} />
   <CTAColor content={data.flyWithUsCTA} />
 </BaseLayout>
