--- a/src/pages/private-pilot-training.astro
+++ b/src/pages/private-pilot-training.astro
@@ -8,6 +8,7 @@ import BookCTA from "../components/BookCTA.astro";
 import TrainingRoadmap from "../components/TrainingRoadmap.astro";
 import privatePilotTraining from "../data/private-pilot-training";
 import programsSwiper from "../data/programSwiper";
+import bookCTA from "../data/book-cta";
 
 const { data } = privatePilotTraining;
 ---
@@ -23,7 +24,7 @@ const { data } = privatePilotTraining;
 
   <TrainingRoadmap content={data.privateRoadmap} />
 
-  <BookCTA content={data.bookCTA} />
+  <BookCTA content={bookCTA} />
   <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
