--- a/src/pages/wingman-family-member-training.astro
+++ b/src/pages/wingman-family-member-training.astro
@@ -21,7 +21,7 @@ const { data } = wingmanTraining;
   <HeaderScreen content={data.header} />
   <PageSummary content={data.pageSummary} />
   <Content data={data.expectWingman} />
-  <BookCTA content={data.bookCTA} />
+  <BookCTA content={bookCTA} />
   <ProgramSwiper content={programsSwiper} />
   <CTAColor content={data.flyWithUsCTA} />
   <script src="../scripts/creativeSwiper.js"></script>
