Update: add bookCTA

--- a/src/pages/instrument-proficiency-check-ipc.astro
+++ b/src/pages/instrument-proficiency-check-ipc.astro
@@ -8,6 +8,7 @@ import BookCTA from "../components/BookCTA.astro";
 import Content from "../components/Content.astro";
 import instrumentProficiency from "../data/instrument-proficiency-check-ipc";
 import programsSwiper from "../data/programSwiper";
+import bookCTA from "../data/book-cta";
 
 const { data } = instrumentProficiency;
 ---
