--- a/src/pages/our-team.astro
+++ b/src/pages/our-team.astro
@@ -9,6 +9,7 @@ import PageSummary from "../components/PageSummary.astro";
 import Partners from "../components/Partners.astro";
 import StaffGrid from "../components/StaffGrid.astro";
 import TeamGrid from "../components/TeamGrid.astro";
+import bookCTA from "../data/book-cta";
 import ourTeam from "../data/our-team";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
