--- a/src/pages/seaplane-pilot-training.astro
+++ b/src/pages/seaplane-pilot-training.astro
@@ -8,6 +8,7 @@ import BookCTA from "../components/BookCTA.astro";
 import Content from "../components/Content.astro";
 import seaplanePilot from "../data/seaplane-pilot-training";
 import programsSwiper from "../data/programSwiper";
+import bookCTA from "../data/book-cta";
 
 const { data } = seaplanePilot;
 ---
