--- a/src/pages/stratus-finance.astro
+++ b/src/pages/stratus-finance.astro
@@ -7,6 +7,7 @@ import BookCTA from "../components/BookCTA.astro";
 import programsSwiper from "../data/programSwiper";
 import stratusInfo from "../data/stratus-finance";
 import ImageComp from "../components/ImageComp.astro";
+import bookCTA from "../data/book-cta";
 
 const stratusFinance = {
   upperHeading: "Stratus Financial",
