--- a/src/pages/wingman-family-member-training.astro
+++ b/src/pages/wingman-family-member-training.astro
@@ -8,6 +8,7 @@ import BookCTA from "../components/BookCTA.astro";
 import Content from "../components/Content.astro";
 import wingmanTraining from "../data/wingman-family-member-training";
 import programsSwiper from "../data/programSwiper";
+import bookCTA from "../data/book-cta";
 
 const { data } = wingmanTraining;
 ---
