--- a/src/pages/youth-aviation-classes.astro
+++ b/src/pages/youth-aviation-classes.astro
@@ -9,6 +9,7 @@ import Content from "../components/Content.astro";
 import programsSwiper from "../data/programSwiper";
 import Aviation101Form from "../components/Aviation101Form.astro";
 import aviation101Info from "../data/youth-aviation-classes";
+import bookCTA from "../data/book-cta";
 
 const { data } = aviation101Info;
 ---
