--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,12 +26,12 @@ const { data } = homePage;
 
   <section
     id="best-of-pembroke-pines"
-    class="bg-black py-20 lg:py-12 flex flex-wrap justify-center items-center gap-12"
+    class="bg-black py-20 lg:py-12 flex flex-wrap justify-center items-center gap-y-14 lg:gap-y-0"
   >
     <a
       href="https://issuu.com/ourcityweston/docs/bopin_2024"
       target="_blank"
-      class="flex flex-col items-center group max-w-sm"
+      class="flex flex-col items-center group w-full lg:w-1/4"
     >
       <ImageComp
         imagePath="/src/assets/best-of-pembroke-pines-flight-school-is-sun-city-aviation-academy.webp"
@@ -50,7 +50,7 @@ const { data } = homePage;
     <a
       href="/blog/sun-city-aviation-academy-is-2025-aopa-flight-training-experience-award-winners/"
       target="_blank"
-      class="flex flex-col items-center group max-w-sm"
+      class="flex flex-col items-center group w-full lg:w-1/4"
     >
       <ImageComp
         imagePath="/src/assets/2025_FTExperience_BFS_Southern_FINAL.png"
@@ -60,7 +60,7 @@ const { data } = homePage;
       <h3
         class="text-muted-300 text-center mt-6 font-light text-lg tracking-wide leading-tight px-3 group-hover:text-white duration-300 ease-out"
       >
-        2025 AOPA Flight Training<strong
+        2025 AOPA Flight Training<br /><strong
           class="text-accent-300 uppercase group-hover:font-bold duration-700 ease-out"
         >
           Experience Award Winners</strong
