--- a/src/components/HeaderScreen.astro
+++ b/src/components/HeaderScreen.astro
@@ -14,7 +14,7 @@ if (!images[content.imagePath]) {
 ---
 
 <header
-  class="relative lg:mt-0 min-h-screen h-fit bg-gray-800 text-white flex flex-col items-center justify-center overflow-hidden"
+  class="relative lg:mt-0 min-h-[90vh] h-fit bg-gray-800 text-white flex flex-col items-center justify-center overflow-hidden"
 >
   <Image
     src={images[content.imagePath]()}
@@ -29,7 +29,7 @@ if (!images[content.imagePath]) {
   </div>
   <!-- Text -->
   <div
-    class="text-white mt-20 lg:mt-0 text-center lg:text-left z-10 flex flex-col items-center gap-4 px-5 h-full lg:pt-28 justify-center"
+    class="text-white mt-20 lg:mt-0 text-center lg:text-left z-10 flex flex-col items-center gap-4 px-5 h-full lg:pt-28 justify-center animate-slow-fade"
   >
     <h1
       class="text-4xl md:text-5xl lg:text-6xl max-w-6xl drop-shadow-lg xl:text-7xl text-center font-black tracking-wide text-gray-100"
