Update: improve img alt text

--- a/src/components/BlogFeed.astro
+++ b/src/components/BlogFeed.astro
@@ -46,7 +46,7 @@ const { data } = Astro.props;
         <article class="relative group w-full lg:m-0 md:w-2/5 lg:w-1/4 isolate flex flex-col justify-end overflow-hidden rounded-md bg-white px-8 pb-8 pt-48 hover:ring-1 hover:ring-accent-300 duration-200">
           <img
             src={post.data.heroImage}
-            alt={post.data.title}
+            alt={`Sun City Aviation Academy Blog - ${post.data.title}`}
             loading="lazy"
             aspect-ratio="1/1"
             class="absolute inset-0 -z-10 h-full w-full object-cover group-hover:scale-110 group-hover:brightness-125 duration-200"
