--- a/src/components/InstructorCard.astro
+++ b/src/components/InstructorCard.astro
@@ -29,6 +29,7 @@ if (!images[imagePath])
       >
         <img
           src="/2025_FTExperience_BFS_CFI.png"
+          alt="Sun City Aviation Academy - AOPA Flight Experience Award 2025"
           class="object-contain w-full h-full group-hover:scale-125 duration-200 ease-in-out"
         />
       </div>
