--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -41,7 +41,7 @@ const {
             <img
               class="object-cover h-full w-full bg-white"
               src={heroImage}
-              alt={title}
+              alt={`Sun City Aviation Academy Blog - ${title}`}
             />
           )
         }
