Update: award 2025 link

--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -47,7 +47,7 @@ import ImageComp from "./ImageComp.astro";
     </h3>
   </a>
   <a
-    href="https://bestofpines.com/"
+    href="https://bestofpines.com/best-flight-school/"
     target="_blank"
     class="flex flex-col items-center group w-full lg:w-1/4"
   >
