--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -97,89 +97,36 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     "@context": "http://schema.org",
     "@type": "LocalBusiness",
     "name": "Sun City Aviation Academy",
-    "description": "Our mission is to train professional, safe, and proficient pilots, who will one day excel in the aviation industry. When you fly with the team at Sun City Aviation Academy, you're family. Individualized instruction means you're more than just a number. You're a future Sun City aviator. We offer a variety of flight training programs, from private pilot to commercial pilot, and everything in between. Our flight school is located in Pembroke Pines, Florida, and we serve the greater Miami area. Contact us today to learn more about our flight training programs.",
-    "keywords": "flight school near me, how to become a pilot, private pilot, discovery flight, introductory flight, instrument rating, commercial certificate, certified flight instructor, airline programs, how to become an airline pilot, Miami, South Florida, Fort Lauderdale, Hollywood, Pembroke Pines, Miramar, Weston, Davie, Plantation, Cooper City, Dania Beach, Hallandale Beach, Aventura, North Miami Beach, Miami Beach, Miami Gardens, Hialeah, Opa-locka, Miami Lakes, Miami Springs, Miami Shores, Miami Gardens, Miami Dade, Broward County",
-    "image": "/sun-city-white-text-logo.webp",
-    "logo": "/SunCity-OG-image.png",
-    "telephone": "(754)423-2159",
+    "description": {description},
+    "keywords": {keywords},
+    "image": {new URL(image, Astro.url)},
+    "telephone": "+1-754-423-2159",
     "email": "info@suncityaviation.com",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "7201 S Airport Rd #504A",
       "addressLocality": "Pembroke Pines",
       "addressRegion": "FL",
-      "addressCountry": "US",
-      "postalCode": "33023"
+      "postalCode": "33023",
+      "addressCountry": "US"
     },
-    "currenciesAccepted": "USD",
-    "paymentAccepted": "Cash, Credit Card, Visa, Mastercard, American Express, Discover, Checks",
-    "areaServed": {
-      "@type": "GeoCircle",
-      "geoMidpoint": {
-        "@type": "GeoCoordinates",
-        "latitude": 25.9961502751203,
-        "longitude": -80.2330145
-      },
-      "geoRadius": 9000
-    },
-    "aggregateRating": {
-      "@type": "AggregateRating",
-      "ratingValue": "5",
-      "reviewCount": "63"
-    },
-    "url": "https://suncityaviation.com/",
-    "priceRange": "$",
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": 25.9961502751203,
-      "longitude": -80.2330145
-    },
-    "openingHoursSpecification": [
+    "url": {Astro.url},
+    "logo": {new URL("/sun-city-white-text-logo.webp", Astro.site)},
+    "hasMap": "https://maps.app.goo.gl/yugDmTfMfqUNYQ7G7",
+    "contactPoint": [
       {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": [
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday"
-          "Sunday"
-        ],
-        "opens": "09:00",
-        "closes": "17:00"
-      },
-    ],
-    "makesOffer": {
-      "@type": "Offer",
-      "itemOffered": {
-        "@type": "Service",
-        "serviceType": "Flight Instruction"
-      },
-      "priceCurrency": "USD",
-      "price": "Varies"
-    },
-    "memberOf": {
-      "@type": "Organization",
-      "name": "Cessna Pilot Center"
-    },
-    "identifier": [
-      {
-        "@type": "PropertyValue",
-        "name": "IATA Code",
-        "value": "HWO"
-      },
-      {
-        "@type": "PropertyValue",
-        "name": "ICAO Code",
-        "value": "KHWO"
-      },
-      {
-        "@type": "PropertyValue",
-        "name": "Airport Code",
-        "value": "HWO"
+        "@type": "ContactPoint",
+        "telephone": "+1-754-423-2159",
+        "contactType": "customer service",
+        "areaServed": "US",
+        "availableLanguage": "en"
       }
     ],
-    "hasMap": "https://maps.app.goo.gl/yugDmTfMfqUNYQ7G7"
+    "sameAs": [
+      "https://www.facebook.com/SunCityAviationAcademy",
+      "https://www.instagram.com/suncity_aviation/",
+      "https://www.linkedin.com/company/sun-city-aviation-academy/",
+      "https://www.youtube.com/@suncityaviation/"
+    ]
   }
 </script>
